CustomObjects/objects/invoiceit_s__Tax_Integration__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__AvaTax_Account_Number__c</fullName>
        <label>AvaTax Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__AvaTax_Client_Name__c</fullName>
        <label>AvaTax Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__AvaTax_Company_Code__c</fullName>
        <label>AvaTax Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__AvaTax_EnvironmentName__c</fullName>
        <label>AvaTax Environment Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__AvaTax_License_Key__c</fullName>
        <label>AvaTax License Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Engine__c</fullName>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara AvaTax</fullName>
                </value>
                <value>
                    <fullName>SpeedTax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <label>Tax Integration</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>